--- a/config/templates/includes/_navbar.html
+++ b/config/templates/includes/_navbar.html
@@ -1,4 +1,5 @@
-{% load static %}
+{% load static menu_tags %}
+{% get_menu 'main' as navigation %}
 
 <div class="navbar-area">
     <!-- Menu For Mobile Device -->
@@ -17,27 +18,16 @@
                 </a>
                 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                     <ul class="navbar-nav m-auto">
+                        {% for item in navigation.menu_items.all %}
                         <li class="nav-item">
-                            <a href="#" class="nav-link active">Home</a>
+                            <a 
+                                {% if item.open_in_new_tab %} target="_blank" {% endif %} 
+                                class="nav-link" 
+                                href="{{ item.link }}">
+                                {{ item.label }}
+                            </a>
                         </li>
-                        <li class="nav-item">
-                            <a href="about.html" class="nav-link">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Jobs</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Candidates</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Pages</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Blog</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="contact.html" class="nav-link">Contact Us</a>
-                        </li>
+                        {% endfor %}
                     </ul>
 
                     <div class="other-option">
