added dynamic category section with blocks

--- a/config/templates/home/home_page.html
+++ b/config/templates/home/home_page.html
@@ -40,51 +40,8 @@
 </div>
 <!-- Banner Section End -->
 
-<!-- Find Section Start -->
-<div class="find-section pb-100">
-    <div class="container">
-        <form class="find-form">
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="exampleInputEmail1"
-                            placeholder="Job Title or Keyword">
-                        <i class="bx bx-search-alt"></i>
-                    </div>
-                </div>
-
-                <div class="col-lg-3">
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="exampleInputEmail2" placeholder="Location">
-                        <i class="bx bx-location-plus"></i>
-                    </div>
-                </div>
-
-                <div class="col-lg-3">
-                    <select class="category">
-                        <option data-display="Category">Category</option>
-                        <option value="1">Web Development</option>
-                        <option value="2">Graphics Design</option>
-                        <option value="4">Data Entry</option>
-                        <option value="5">Visual Editor</option>
-                        <option value="6">Office Assistant</option>
-                    </select>
-                </div>
-
-                <div class="col-lg-3">
-                    <button type="submit" class="find-btn">
-                        Find A Job
-                        <i class='bx bx-search'></i>
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-<!-- Find Section End -->
-
 <!-- Why Choose Section Start -->
-<section class="why-choose-two pb-70">
+<section class="why-choose-two pb-70 mt-5">
     {% for why_us_block in self.why_us %}
     {% include_block why_us_block %}
     {% endfor %}
@@ -93,95 +50,9 @@
 
 <!-- Category Section Start -->
 <section class="categories-section pb-70">
-    <div class="container">
-        <div class="section-title text-center">
-            <h2>Choose Your Category</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-6">
-                <a href="#">
-                    <div class="category-card">
-                        <i class='flaticon-accounting'></i>
-                        <h3>Accountancy</h3>
-                        <p>301 open position</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-sm-6">
-                <a href="#">
-                    <div class="category-card">
-                        <i class='flaticon-graduation-cap'></i>
-                        <h3>Education</h3>
-                        <p>210 open position</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-sm-6">
-                <a href="#">
-                    <div class="category-card">
-                        <i class='flaticon-wrench-and-screwdriver-in-cross'></i>
-                        <h3>Automotive Jobs</h3>
-                        <p>281 open position</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-sm-6">
-                <a href="#">
-                    <div class="category-card">
-                        <i class='flaticon-consultation'></i>
-                        <h3>Business</h3>
-                        <p>122 open position</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-sm-6">
-                <a href="#">
-                    <div class="category-card">
-                        <i class='flaticon-heart'></i>
-                        <h3>Health Care</h3>
-                        <p>335 open position</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-lg-3  col-md-4 col-sm-6">
-                <a href="#">
-                    <div class="category-card">
-                        <i class='flaticon-computer'></i>
-                        <h3>IT & Agency</h3>
-                        <p>401 open position</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-lg-3  col-md-4 col-sm-6 offset-md-2 offset-lg-0">
-                <a href="#">
-                    <div class="category-card">
-                        <i class='flaticon-worker'></i>
-                        <h3>Engineering</h3>
-                        <p>100 open position</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-sm-6">
-                <a href="#">
-                    <div class="category-card">
-                        <i class='flaticon-auction'></i>
-                        <h3>Legal</h3>
-                        <p>201 open position</p>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
+    {% for category_block in self.job_categories %}
+        {% include_block category_block %}
+    {% endfor %}
 </section>
 <!-- Category Section End -->
 
