--- a/config/templates/includes/_navbar.html
+++ b/config/templates/includes/_navbar.html
@@ -13,7 +13,7 @@
     <div class="main-nav">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="/">
                     <img src="{% static 'img/logo.png' %}" alt="logo">
                 </a>
                 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
