added options for menus in the Menu model, dynamically  rendered menu in footer

--- a/config/templates/includes/_footer.html
+++ b/config/templates/includes/_footer.html
@@ -1,4 +1,6 @@
-{% load static %}
+{% load static menu_tags %}
+{% get_menu 'for_candidate' as candidate_navigation %}
+{% get_menu 'quick_links' as quick_navigation %}
 
 <footer class="footer-area pt-100 pb-70">
     <div class="container">
@@ -24,93 +26,41 @@
                 </div>
             </div>
 
+            {% if candidate_navigation %}
             <div class="col-lg-3 col-sm-6">
                 <div class="footer-widget pl-60">
                     <h3>For Candidate</h3>
                     <ul>
+                        {% for item in candidate_navigation.menu_items.all %}
                         <li>
-                            <a href="#">
+                            <a href="{{ item.link }}"  {% if item.open_in_new_tab %} target="_blank" {% endif %}>
                                 <i class='bx bx-chevrons-right bx-tada'></i>
-                                Browse Jobs
+                                {{ item.label }}
                             </a>
                         </li>
-                        <li>
-                            <a href="#">
-                                <i class='bx bx-chevrons-right bx-tada'></i>
-                                Account
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class='bx bx-chevrons-right bx-tada'></i>
-                                Browse Categories
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class='bx bx-chevrons-right bx-tada'></i>
-                                Resume
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class='bx bx-chevrons-right bx-tada'></i>
-                                Job List
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class='bx bx-chevrons-right bx-tada'></i>
-                                Sign Up
-                            </a>
-                        </li>
+                        {% endfor %}
                     </ul>
                 </div>
             </div>
+            {% endif %}
 
+            {% if quick_navigation %}
             <div class="col-lg-3 col-sm-6">
                 <div class="footer-widget pl-60">
                     <h3>Quick Links</h3>
                     <ul>
+                        {% for quick_item in quick_navigation.menu_items.all %}
                         <li>
-                            <a href="#l">
+                            <a href="{{ quick_item.link }}"  {% if quick_item.open_in_new_tab %} target="_blank" {% endif %}>
                                 <i class='bx bx-chevrons-right bx-tada'></i>
-                                Home
+                                {{ quick_item.label }}
                             </a>
                         </li>
-                        <li>
-                            <a href="#">
-                                <i class='bx bx-chevrons-right bx-tada'></i>
-                                About
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class='bx bx-chevrons-right bx-tada'></i>
-                                FAQ
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class='bx bx-chevrons-right bx-tada'></i>
-                                Pricing
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class='bx bx-chevrons-right bx-tada'></i>
-                                Privacy
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class='bx bx-chevrons-right bx-tada'></i>
-                                Contact
-                            </a>
-                        </li>
+                        {% endfor %}
                     </ul>
                 </div>
             </div>
+            {% endif %}
 
             <div class="col-lg-3 col-sm-6">
                 <div class="footer-widget footer-info">
