--- a/config/templates/includes/_footer.html
+++ b/config/templates/includes/_footer.html
@@ -1,4 +1,4 @@
-{% load static menu_tags %}
+{% load static menu_tags wagtailcore_tags wagtailimages_tags %}
 {% get_menu 'for_candidate' as candidate_navigation %}
 {% get_menu 'quick_links' as quick_navigation %}
 
@@ -13,16 +13,15 @@
                         </a>
                     </div>
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incididunt ut labore
-                        et dolore
-                        magna. Sed eiusmod tempor incididunt ut.</p>
-
+                    <p>{{ settings.site_settings.CompanySettings.summary }}</p>
+                    
+                    {% if settings.site_settings.SocialMediaSettings.social_media_links.all %}
                     <div class="footer-social">
-                        <a href="#" target="_blank"><i class='bx bxl-facebook'></i></a>
-                        <a href="#" target="_blank"><i class='bx bxl-twitter'></i></a>
-                        <a href="#" target="_blank"><i class='bx bxl-pinterest-alt'></i></a>
-                        <a href="#" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                    {% for item in settings.site_settings.SocialMediaSettings.social_media_links.all %}
+                        <a href="{{ item.link }}" target="_blank"><i class='bx {{ item.icon_class }}'></i></a>
+                    {% endfor %}
                     </div>
+                    {% endif %}
                 </div>
             </div>
 
@@ -72,7 +71,7 @@
                                 Phone:
                             </span>
                             <a href="tel:882569756">
-                                +101 984 754
+                                {{ settings.site_settings.ContactInfo.phone }}
                             </a>
                         </li>
 
@@ -81,8 +80,8 @@
                                 <i class='bx bxs-envelope'></i>
                                 Email:
                             </span>
-                            <a href="mailto:info@jovie.com">
-                                info@jovie.com
+                            <a href="mailto:{{ settings.site_settings.ContactInfo.email }}">
+                                {{ settings.site_settings.ContactInfo.email }}
                             </a>
                         </li>
 
@@ -91,7 +90,7 @@
                                 <i class='bx bx-location-plus'></i>
                                 Address:
                             </span>
-                            123, Denver, USA
+                            {{ settings.site_settings.ContactInfo.address }}
                         </li>
                     </ul>
                 </div>
